--- a/armv8/armv8.config
+++ b/armv8/armv8.config
@@ -3286,7 +3286,7 @@ CONFIG_PACKAGE_python3=y
 CONFIG_PACKAGE_python3-asyncio=y
 # CONFIG_PACKAGE_python3-asyncio-src is not set
 # CONFIG_PACKAGE_python3-atomicwrites is not set
-CONFIG_PACKAGE_python3-attrs=y
+# CONFIG_PACKAGE_python3-attrs is not set
 # CONFIG_PACKAGE_python3-attrs-src is not set
 # CONFIG_PACKAGE_python3-augeas is not set
 # CONFIG_PACKAGE_python3-automat is not set
@@ -3294,7 +3294,7 @@ CONFIG_PACKAGE_python3-attrs=y
 # CONFIG_PACKAGE_python3-babel is not set
 CONFIG_PACKAGE_python3-base=y
 # CONFIG_PACKAGE_python3-base-src is not set
-CONFIG_PACKAGE_python3-bcrypt=y
+# CONFIG_PACKAGE_python3-bcrypt is not set
 # CONFIG_PACKAGE_python3-bcrypt-src is not set
 # CONFIG_PACKAGE_python3-bidict is not set
 # CONFIG_PACKAGE_python3-boto3 is not set
@@ -3304,9 +3304,9 @@ CONFIG_PACKAGE_python3-cached-property=y
 # CONFIG_PACKAGE_python3-cached-property-src is not set
 # CONFIG_PACKAGE_python3-cachelib is not set
 # CONFIG_PACKAGE_python3-cachetools is not set
-CONFIG_PACKAGE_python3-certifi=y
+# CONFIG_PACKAGE_python3-certifi is not set
 # CONFIG_PACKAGE_python3-certifi-src is not set
-CONFIG_PACKAGE_python3-cffi=y
+# CONFIG_PACKAGE_python3-cffi is not set
 # CONFIG_PACKAGE_python3-cffi-src is not set
 CONFIG_PACKAGE_python3-cgi=y
 # CONFIG_PACKAGE_python3-cgi-src is not set
@@ -3329,7 +3329,7 @@ CONFIG_PACKAGE_python3-codecs=y
 CONFIG_PACKAGE_python3-ctypes=y
 # CONFIG_PACKAGE_python3-ctypes-src is not set
 # CONFIG_PACKAGE_python3-curl is not set
-CONFIG_PACKAGE_python3-dateutil=y
+# CONFIG_PACKAGE_python3-dateutil is not set
 # CONFIG_PACKAGE_python3-dateutil-src is not set
 CONFIG_PACKAGE_python3-dbm=y
 # CONFIG_PACKAGE_python3-dbm-src is not set
@@ -3346,16 +3346,16 @@ CONFIG_PACKAGE_python3-distutils=y
 # CONFIG_PACKAGE_python3-django-cors-headers is not set
 # CONFIG_PACKAGE_python3-django-etesync-journal is not set
 # CONFIG_PACKAGE_python3-django-restframework is not set
-CONFIG_PACKAGE_python3-dns=y
+# CONFIG_PACKAGE_python3-dns is not set
 # CONFIG_PACKAGE_python3-dns-src is not set
-CONFIG_PACKAGE_python3-docker=y
+# CONFIG_PACKAGE_python3-docker is not set
 # CONFIG_PACKAGE_python3-docker-src is not set
-CONFIG_PACKAGE_python3-dockerpty=y
+# CONFIG_PACKAGE_python3-dockerpty is not set
 # CONFIG_PACKAGE_python3-dockerpty-src is not set
-CONFIG_PACKAGE_python3-docopt=y
+# CONFIG_PACKAGE_python3-docopt is not set
 # CONFIG_PACKAGE_python3-docopt-src is not set
 # CONFIG_PACKAGE_python3-docutils is not set
-CONFIG_PACKAGE_python3-dotenv=y
+# CONFIG_PACKAGE_python3-dotenv is not set
 # CONFIG_PACKAGE_python3-dotenv-src is not set
 # CONFIG_PACKAGE_python3-drf-nested-routers is not set
 CONFIG_PACKAGE_python3-email=y
@@ -3380,7 +3380,7 @@ CONFIG_PACKAGE_python3-gdbm=y
 # CONFIG_PACKAGE_python3-gpiod is not set
 # CONFIG_PACKAGE_python3-greenlet is not set
 # CONFIG_PACKAGE_python3-hyperlink is not set
-CONFIG_PACKAGE_python3-idna=y
+# CONFIG_PACKAGE_python3-idna is not set
 # CONFIG_PACKAGE_python3-idna-src is not set
 # CONFIG_PACKAGE_python3-ifaddr is not set
 # CONFIG_PACKAGE_python3-incremental is not set
@@ -3410,7 +3410,7 @@ CONFIG_PACKAGE_python3-light=y
 # CONFIG_PACKAGE_python3-light-src is not set
 CONFIG_PACKAGE_python3-logging=y
 # CONFIG_PACKAGE_python3-logging-src is not set
-CONFIG_PACKAGE_python3-lxml=y
+# CONFIG_PACKAGE_python3-lxml is not set
 # CONFIG_PACKAGE_python3-lxml-src is not set
 CONFIG_PACKAGE_python3-lzma=y
 # CONFIG_PACKAGE_python3-lzma-src is not set
@@ -3435,7 +3435,7 @@ CONFIG_PACKAGE_python3-openssl=y
 # CONFIG_PACKAGE_python3-packages is not set
 # CONFIG_PACKAGE_python3-packaging is not set
 # CONFIG_PACKAGE_python3-paho-mqtt is not set
-CONFIG_PACKAGE_python3-paramiko=y
+# CONFIG_PACKAGE_python3-paramiko is not set
 # CONFIG_PACKAGE_python3-paramiko-src is not set
 # CONFIG_PACKAGE_python3-parsley is not set
 # CONFIG_PACKAGE_python3-passlib is not set
@@ -3452,12 +3452,12 @@ CONFIG_PACKAGE_python3-ply=y
 # CONFIG_PACKAGE_python3-py is not set
 # CONFIG_PACKAGE_python3-pyasn1 is not set
 # CONFIG_PACKAGE_python3-pyasn1-modules is not set
-CONFIG_PACKAGE_python3-pycparser=y
+# CONFIG_PACKAGE_python3-pycparser is not set
 # CONFIG_PACKAGE_python3-pycparser-src is not set
 CONFIG_PACKAGE_python3-pydoc=y
 # CONFIG_PACKAGE_python3-pydoc-src is not set
 # CONFIG_PACKAGE_python3-pyinotify is not set
-CONFIG_PACKAGE_python3-pymysql=y
+# CONFIG_PACKAGE_python3-pymysql is not set
 
 #
 # Configuration
@@ -3473,7 +3473,7 @@ CONFIG_PACKAGE_python3-pymysql=y
 # CONFIG_PACKAGE_python3-pyotp is not set
 # CONFIG_PACKAGE_python3-pyparsing is not set
 # CONFIG_PACKAGE_python3-pyroute2 is not set
-CONFIG_PACKAGE_python3-pyrsistent=y
+# CONFIG_PACKAGE_python3-pyrsistent is not set
 # CONFIG_PACKAGE_python3-pyrsistent-src is not set
 # CONFIG_PACKAGE_python3-pyserial is not set
 # CONFIG_PACKAGE_python3-pysocks is not set
@@ -3496,23 +3496,23 @@ CONFIG_PACKAGE_python3-requests=y
 # CONFIG_PACKAGE_python3-service-identity is not set
 CONFIG_PACKAGE_python3-setuptools=y
 # CONFIG_PACKAGE_python3-setuptools-src is not set
-CONFIG_PACKAGE_python3-simplejson=y
+# CONFIG_PACKAGE_python3-simplejson is not set
 # CONFIG_PACKAGE_python3-simplejson-src is not set
-CONFIG_PACKAGE_python3-six=y
+# CONFIG_PACKAGE_python3-six is not set
 # CONFIG_PACKAGE_python3-six-src is not set
 # CONFIG_PACKAGE_python3-slugify is not set
 # CONFIG_PACKAGE_python3-smbus is not set
 # CONFIG_PACKAGE_python3-socketio is not set
-CONFIG_PACKAGE_python3-speedtest-cli=y
+# CONFIG_PACKAGE_python3-speedtest-cli is not set
 # CONFIG_PACKAGE_python3-speedtest-cli-src is not set
-CONFIG_PACKAGE_python3-sqlalchemy=y
+# CONFIG_PACKAGE_python3-sqlalchemy is not set
 # CONFIG_PACKAGE_python3-sqlalchemy-src is not set
 CONFIG_PACKAGE_python3-sqlite3=y
 # CONFIG_PACKAGE_python3-sqlite3-src is not set
 # CONFIG_PACKAGE_python3-sqlparse is not set
 # CONFIG_PACKAGE_python3-stem is not set
 # CONFIG_PACKAGE_python3-text-unidecode is not set
-CONFIG_PACKAGE_python3-texttable=y
+# CONFIG_PACKAGE_python3-texttable is not set
 # CONFIG_PACKAGE_python3-texttable-src is not set
 # CONFIG_PACKAGE_python3-toml is not set
 # CONFIG_PACKAGE_python3-tornado is not set
@@ -3525,7 +3525,7 @@ CONFIG_PACKAGE_python3-unittest=y
 # CONFIG_PACKAGE_python3-unittest-src is not set
 CONFIG_PACKAGE_python3-urllib=y
 # CONFIG_PACKAGE_python3-urllib-src is not set
-CONFIG_PACKAGE_python3-urllib3=y
+# CONFIG_PACKAGE_python3-urllib3 is not set
 # CONFIG_PACKAGE_python3-urllib3-src is not set
 # CONFIG_PACKAGE_python3-vobject is not set
 # CONFIG_PACKAGE_python3-voluptuous is not set
@@ -3538,7 +3538,7 @@ CONFIG_PACKAGE_python3-websocket-client=y
 CONFIG_PACKAGE_python3-xml=y
 # CONFIG_PACKAGE_python3-xml-src is not set
 # CONFIG_PACKAGE_python3-xmltodict is not set
-CONFIG_PACKAGE_python3-yaml=y
+# CONFIG_PACKAGE_python3-yaml is not set
 # CONFIG_PACKAGE_python3-yaml-src is not set
 # CONFIG_PACKAGE_python3-yarl is not set
 # CONFIG_PACKAGE_python3-zeroconf is not set
