--- a/.github/workflows/Build_x86_64_518.yml
+++ b/.github/workflows/Build_x86_64_518.yml
@@ -222,7 +222,10 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         name: ${{ env.DATE }} 「 ${{ env.PRODUCT_NAME }} 」固件
+        allowUpdates: true
+        removeArtifacts: true
         tag: ${{ env.FILE_NAME }}
+        commit: main
         token: ${{ secrets.GH_TOKEN }}
         body: |
           - ⭐️这是 ${{ env.PRODUCT_NAME }}
