--- a/.github/workflows/Build_armv8.yml
+++ b/.github/workflows/Build_armv8.yml
@@ -215,8 +215,8 @@ jobs:
       with:
         name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }} 」
         allowUpdates: true
-        removeArtifacts: true
         tag: ${{ env.FILE_NAME }}
+        commit: main
         token: ${{ secrets.GH_TOKEN }}
         body: |
           - 🔥此为ARMv8底包，非完整固件，不可直刷
@@ -253,8 +253,8 @@ jobs:
       with:
         name: ${{ env.DATE }} 「 ${{ env.PRODUCT_NAME }} 」固件
         allowUpdates: true
-        removeArtifacts: true
         tag: ${{ env.PRODUCT_NAME }}
+        commit: main
         token: ${{ secrets.GH_TOKEN }}
         body: |
           *⭐️默认 IP：192.168.8.8 默认密码：password
@@ -295,6 +295,7 @@ jobs:
       with:
         keep_latest: 8
         delete_tags: true
+        delete_tag_pattern: _
       env:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
     
