--- a/armv8/armv8.config
+++ b/armv8/armv8.config
@@ -3445,7 +3445,7 @@ CONFIG_PACKAGE_python3-pip=y
 CONFIG_PACKAGE_python3-pkg-resources=y
 # CONFIG_PACKAGE_python3-pkg-resources-src is not set
 # CONFIG_PACKAGE_python3-pluggy is not set
-CONFIG_PACKAGE_python3-ply=y
+# CONFIG_PACKAGE_python3-ply is not set
 # CONFIG_PACKAGE_python3-ply-src is not set
 # CONFIG_PACKAGE_python3-psutil is not set
 # CONFIG_PACKAGE_python3-psycopg2 is not set
