--- a/.github/workflows/Build_x86_64.yml
+++ b/.github/workflows/Build_x86_64.yml
@@ -192,9 +192,9 @@ jobs:
       if: steps.compile.outputs.status == 'success' 
       with:
         name: x86-config
-        path: openwrt/bin/targets/*/*/config.buildinfo
+        path: /home/runner/work/OpenWrt/OpenWrt/openwrt/.config
     
-    - name: elete files
+    - name: Delete files
       run: |
         cd openwrt 
         bash  rename.sh
