--- a/.github/workflows/ARMv8-OpenWrt.yml
+++ b/.github/workflows/ARMv8-OpenWrt.yml
@@ -57,7 +57,7 @@ jobs:
       working-directory: /workdir
       run: |
         df -hT $PWD
-        git clone $REPO_URL -b $REPO_BRANCH openwrt
+        git clone -b $REPO_BRANCH --single-branch $REPO_URL openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
         cd openwrt
         Author=$(git show -s --date=short --format="Author: %an")
@@ -79,7 +79,7 @@ jobs:
         PACKAGE_SOC: s905d_s905x3
         WHOAMI: Jejz
         KERNEL_REPO_URL: https://github.com/Jejz168/OpenWrt/tree/main/backup/kernel
-        KERNEL_VERSION_NAME: 5.4.191_5.10.100
+        KERNEL_VERSION_NAME: 5.4.191_5.10.100_5.15.51_5.18.10
         KERNEL_AUTO_LATEST: true
         GZIP_IMGS: .gz
     
