--- a/.github/workflows/ARMv8-ROOTFS.yml
+++ b/.github/workflows/ARMv8-ROOTFS.yml
@@ -32,7 +32,7 @@ env:
   UPLOAD_FIRMWARE: false
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-  FILE_NAME: ARMv8-ROOTFS
+  FILE_NAME: ARMv8
   PRODUCT_NAME: ARMv8-ROOTFS
 
 jobs:
@@ -188,7 +188,7 @@ jobs:
         commit: main
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          - 🔥此为ARMv8底包，非完整固件，不可直刷
+          - 🔥这是${{ env.FILE_NAME }}底包，非完整固件，不可直刷
           - 当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
           - ★ 感谢源码作者无私分享！
           - 🎈🎈🎈 更新信息 🎈🎈🎈
