--- a/.github/workflows/Build_armv8.yml
+++ b/.github/workflows/Build_armv8.yml
@@ -229,8 +229,8 @@ jobs:
       with:
         name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }} 」
         allowUpdates: true
+        replacesArtifacts: true
         tag: ${{ env.FILE_NAME }}
-        commit: main
         token: ${{ secrets.GH_TOKEN }}
         body: |
           - 🔥此为ARMv8底包，非完整固件，不可直刷
@@ -267,8 +267,8 @@ jobs:
       with:
         name: ${{ env.DATE }} 「 ${{ env.PRODUCT_NAME }} 」固件
         allowUpdates: true
+        replacesArtifacts: true
         tag: ${{ env.PRODUCT_NAME }}
-        commit: main
         token: ${{ secrets.GH_TOKEN }}
         body: |
           - ⭐️默认 IP：192.168.8.8 默认密码：password
