--- a/.github/workflows/Build_armv8.yml
+++ b/.github/workflows/Build_armv8.yml
@@ -93,6 +93,7 @@ jobs:
         echo "commit=$Commit" >> $GITHUB_ENV
         echo "hash=$Hash" >> $GITHUB_ENV
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
+        echo "TAG=$(date "+%Y%m%d%H%M")" >> $GITHUB_ENV
         echo "start=$(date +%s)" >> $GITHUB_ENV
         
     - name: Load custom feeds
@@ -227,10 +228,8 @@ jobs:
       id: release
       uses: ncipollo/release-action@v1
       with:
-        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }} 」
-        allowUpdates: true
-        replacesArtifacts: true
-        tag: ${{ env.FILE_NAME }}
+        name: ${{ env.DATE }} 🚫「 ${{ env.FILE_NAME }} 」
+        tag: ${{ env.TAG }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
           - 🔥此为ARMv8底包，非完整固件，不可直刷
@@ -266,9 +265,7 @@ jobs:
       if: env.PACKAGED_STATUS == 'success' && !cancelled()
       with:
         name: ${{ env.DATE }} 「 ${{ env.PRODUCT_NAME }} 」固件
-        allowUpdates: true
-        replacesArtifacts: true
-        tag: ${{ env.PRODUCT_NAME }}
+        tag: ${{ env.TAG }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
           - ⭐️默认 IP：192.168.8.8 默认密码：password
