--- a/.github/workflows/ARMv8-ROOTFS.yml
+++ b/.github/workflows/ARMv8-ROOTFS.yml
@@ -29,7 +29,7 @@ env:
   DIY_P1_SH: armv8/diy-part1.sh
   DIY_P2_SH: armv8/diy-part2.sh
   UPLOAD_BIN_DIR: false
-   UPLOAD_CONFIG: true
+  UPLOAD_CONFIG: true
   UPLOAD_FIRMWARE: false
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
@@ -143,8 +143,16 @@ jobs:
         echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
         
     - name: Check space usage
-      if: (!cancelled())
-      run: df -hT
+      run: |
+        echo "=========================================="
+        echo "----------------空间使用-------------------"
+        echo "=========================================="
+        echo " 系统空间      类型   总数  已用  可用 使用率"
+        df -hT
+        echo "=========================================="
+        du -h --max-depth=1 openwrt/ --exclude=build_dir --exclude=bin
+        du -h --max-depth=1 openwrt/build_dir
+        du -h --max-depth=1 openwrt/bin
 
     - name: Organize firmware files
       id: organizer
