--- a/.github/workflows/Build_x86_64.yml
+++ b/.github/workflows/Build_x86_64.yml
@@ -94,7 +94,7 @@ jobs:
         echo "commit=$Commit" >> $GITHUB_ENV
         echo "hash=$Hash" >> $GITHUB_ENV
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
-        echo "TAG=$(date "+%Y%m%d%H%M")" >> $GITHUB_ENV
+        echo "TAG=$(date "+%Y%m%d%H%M%S")" >> $GITHUB_ENV
         echo "start=$(date +%s)" >> $GITHUB_ENV
 
     - name: Load custom feeds
