--- a/.github/workflows/Build_armv8.yml
+++ b/.github/workflows/Build_armv8.yml
@@ -94,7 +94,7 @@ jobs:
         echo "commit=$Commit" >> $GITHUB_ENV
         echo "hash=$Hash" >> $GITHUB_ENV
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
-        echo "TAG=$(date "+%Y%m%d%H%M")" >> $GITHUB_ENV
+        echo "TAG=$(date "+%Y%m%d%H%M%S")" >> $GITHUB_ENV
         echo "start=$(date +%s)" >> $GITHUB_ENV
         
     - name: Load custom feeds
@@ -210,7 +210,7 @@ jobs:
       id: organize
       if: steps.compile.outputs.status == 'success'
       run: |
-        echo "TAG1=$(date "+%Y%m%d%H%M")" >> $GITHUB_ENV
+        echo "TAG1=$(date "+%Y%m%d%H%M%S")" >> $GITHUB_ENV
         cd $GITHUB_WORKSPACE/openwrt/bin/packages
         tar -zcvf Packages.tar.gz ./*
         cp Packages.tar.gz $GITHUB_WORKSPACE/openwrt/bin/targets/*/*
