--- a/.github/workflows/Build_x86_64.yml
+++ b/.github/workflows/Build_x86_64.yml
@@ -240,7 +240,7 @@ jobs:
         tag: ${{ env.TAG }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          - ⭐️这是 ${{ env.PRODUCT_NAME }}
+          - ⭐️此为 ${{ env.PRODUCT_NAME }}
           - 🔥默认IP：192.168.8.3 默认密码：password
           - 当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
           - ★ 感谢源码作者无私分享！
