--- a/.github/workflows/Build_x86_64_518.yml
+++ b/.github/workflows/Build_x86_64_518.yml
@@ -246,7 +246,7 @@ jobs:
         tag: ${{ env.TAG }}-${{ env.PRODUCT_NAME }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          - ⭐️此为 ${{ env.PRODUCT_NAME }} 固件
+          - ⭐️此为 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 固件
           - 🔥默认IP：192.168.8.3 默认密码：password
           - 当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
           - ★ 感谢源码作者无私分享！
