--- a/.github/workflows/Multiple Source Check.yml
+++ b/.github/workflows/Multiple Source Check.yml
@@ -148,7 +148,18 @@ jobs:
           🚀 OpenClash
                 ● 源码更新了
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍：https://github.com/vernesong/OpenClash             
+          📍：https://github.com/vernesong/OpenClash           
+# //////////////////////////////////////////////////////////////////////////////////////////////
+  Repository:
+    if: ${{ always() }}
+    #needs: [Checka]    
+    runs-on: ubuntu-latest
+    steps:  
+    - name: Repository Dispatch
+      uses: peter-evans/repository-dispatch@v2
+      with:
+          token: ${{ secrets.GH_TOKEN }}
+          event-type: my-build
 # //////////////////////////////////////////////////////////////////////////////////////////////
   Cleaning:
     if: ${{ always() }}
