--- a/.github/workflows/Build_x86_64_515.yml
+++ b/.github/workflows/Build_x86_64_515.yml
@@ -38,7 +38,10 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@main
-      
+      with:
+          ref: ${{ github.event.client_payload.ref }}
+    - run: echo ${{ github.event.client_payload.sha }}
+
     - name: Check server configuration
       run: |
         echo "警告⚠"
